Sat Sep 14 15:55:26 EDT 2002	JK Lowden <jklowden@schemamania.org>
	* doc/Makefile.am  use $DOCBOOK_DSL to find jade files, manpages depend on inputs (!)
	* doc/api_status.txt 	added dbversion, DBTDS
	* doc/tsql.txt		added information about getting the TDS version.
	* include/sybdb.h	added dbversion, DBTDS, dbtds
	* include/tds.h.in	added tds_version
	* src/apps/tsql.c	added "version" and "GO" magic words
	* src/dblib/dblib.c	added dbversion, dbtds
	* src/tds/iconv.c	made iconv inputs const again
	* src/tds/util.c	added tds_version
	
Sat Sep 14 15:45:07 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/connectparams.c src/odbc/convert_tds2sql.c:
	* src/odbc/odbc.c src/odbc/odbc_util.c:
	* src/odbc/unittests/Makefile.am src/odbc/unittests/t0002.c:
	- fix for thread safe compiled with iODBC
	- check for out of memory connectiong
	- do not try to read PWD and UID from ini (never there)
	- user server in ini file for compatibility with windows
	- fix return of SQLColAttributes and a small buffer overflow
	- return correct value from SQLFreeHandle
	- handle some other type in ODBC
	- add test to check no drop of data dropping statement

Sat Sep 14  8:41:02 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/mem.c: return NULL on out-of-memory, do not core

Fri Sep 13 19:39:31 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/tds/convert.c:
	- Fix my stupid mistakes in revision 1.71 of convert.c.
	  Casting these chars to int would just mask the problem instead of
	  fixing it, on hosts with signed chars.  Cast to unsigned char
	  instead, and let the compiler implicitly convert to a positive
	  integer for subscripting in the ctype arrays.

Fri Sep 13 16:50:17 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/tds.h.in include/tdsutil.h src/tds/convert.c
	  src/tds/login.c src/tds/token.c:
	- a few "gcc -Wall" cleanups

Fri Sep 13 16:08:52 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/tds.h.in include/tdsconvert.h src/dblib/dbopen.c