@@ -26,7 +26,7 @@
 #include <assert.h>
 #include <sqlext.h>
 
-static char  software_version[]   = "$Id: convert_sql2string.c,v 1.7 2002/08/28 08:07:36 freddy77 Exp $";
+static char  software_version[]   = "$Id: convert_sql2string.c,v 1.8 2002/09/15 16:08:24 freddy77 Exp $";
 static void *no_unused_var_warn[] = {software_version,
                                      no_unused_var_warn};
 
@@ -111,14 +111,14 @@ convert_datetime2string(TDSCONTEXT *context,int srctype,TDS_CHAR *src,
 		src_tm.tm_year = src_date->year  - 1900;
 		src_tm.tm_mon  = src_date->month - 1;
 		src_tm.tm_mday = src_date->day;
-		strcpy(&dfmt[0], "%b %d %Y");
+		strcpy(&dfmt[0], "%Y-%m-%d");
 		break;
 	case SQL_C_TIME:
 	case SQL_C_TYPE_TIME:
 		src_tm.tm_hour = src_time->hour;
 		src_tm.tm_min  = src_time->minute;
 		src_tm.tm_sec  = src_time->second;
-		strcpy(&dfmt[0], "%I:%M%p");
+		strcpy(&dfmt[0], "%I:%M:%S");
 		break;
 	case SQL_C_TIMESTAMP:
 	case SQL_C_TYPE_TIMESTAMP:
@@ -128,7 +128,7 @@ convert_datetime2string(TDSCONTEXT *context,int srctype,TDS_CHAR *src,
 		src_tm.tm_hour = src_timestamp->hour;
 		src_tm.tm_min  = src_timestamp->minute;
 		src_tm.tm_sec  = src_timestamp->second;
-		strcpy(&dfmt[0], "%b %d %Y %I:%M%p");
+		strcpy(&dfmt[0], "%Y-%m-%d %I:%M:%S");
 		break;
 	default:
 		return TDS_FAIL;
